syntax = "proto3";

option java_package = "com.mrsep.musicrecognizer";
option java_multiple_files = true;

message UserPreferencesProto {

  bool onboarding_completed = 1;
  string api_token = 2;

  message RequiredServicesProto {
    bool spotify = 3;
    bool youtube = 4;
    bool soundcloud = 5;
    bool apple_music = 6;
    bool deezer = 7;
    bool napster = 8;
    bool musicbrainz = 9;
  }

  RequiredServicesProto required_services = 10;

  bool notification_service_enabled = 11;
  bool dynamic_colors_enabled = 12;
  bool developer_mode_enabled = 13;

  enum ScheduleActionProto {
    IGNORE = 0;
    SAVE = 1;
    SAVE_AND_LAUNCH = 2;
  }

  message SchedulePolicyProto {
    ScheduleActionProto no_matches = 14;
    ScheduleActionProto bad_connection = 15;
    ScheduleActionProto another_failure = 16;
  }

  SchedulePolicyProto schedule_policy = 17;

  enum FontSizeProto {
    SMALL = 0;
    NORMAL = 1;
    LARGE = 2;
    HUGE = 3;
  }

  message LyricsFontStyleProto {
    FontSizeProto font_size = 18;
    bool is_bold = 19;
    bool is_high_contrast = 20;
  }

  LyricsFontStyleProto lyrics_font_style = 21;

}